[gd_scene load_steps=23 format=3 uid="uid://ds0jdbnrh6dj1"]

[ext_resource type="Script" path="res://Levels/Exit.gd" id="1_moo27"]
[ext_resource type="Texture2D" uid="uid://dynokr4l41ncb" path="res://Assets/Portal.png" id="1_ta73c"]
[ext_resource type="Script" path="res://Player/Player.gd" id="2_hxmhj"]
[ext_resource type="Texture2D" uid="uid://c84op8a5loqpy" path="res://Assets/player.png" id="3_a8tl5"]
[ext_resource type="Texture2D" uid="uid://61jskxmah413" path="res://Assets/Platformer sprite sheet fixed.png" id="4_rhker"]
[ext_resource type="PackedScene" uid="uid://chg52dofx8plp" path="res://Enemies/bee.tscn" id="5_vpwxy"]
[ext_resource type="Script" path="res://UI/Menu.gd" id="7_4bsh8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_olvke"]
atlas = ExtResource("3_a8tl5")
region = Rect2(288, 70, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_11r1t"]
atlas = ExtResource("3_a8tl5")
region = Rect2(0, 0, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2wtv"]
atlas = ExtResource("3_a8tl5")
region = Rect2(224, 70, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_yassn"]
atlas = ExtResource("3_a8tl5")
region = Rect2(256, 70, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcfl7"]
atlas = ExtResource("3_a8tl5")
region = Rect2(32, 0, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7gwd"]
atlas = ExtResource("3_a8tl5")
region = Rect2(64, 0, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_l23wt"]
atlas = ExtResource("3_a8tl5")
region = Rect2(96, 0, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sg2q"]
atlas = ExtResource("3_a8tl5")
region = Rect2(128, 0, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_lebfi"]
atlas = ExtResource("3_a8tl5")
region = Rect2(160, 0, 32, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qwdd"]
atlas = ExtResource("3_a8tl5")
region = Rect2(192, 0, 32, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_mrhrm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olvke")
}],
"loop": false,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11r1t")
}],
"loop": false,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2wtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yassn")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcfl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7gwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l23wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sg2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lebfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qwdd")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1tw2"]
size = Vector2(22, 50)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l8rte"]
texture = ExtResource("4_rhker")
texture_region_size = Vector2i(75, 75)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-37.5, -37.5, 37.5, -37.5, 37.5, 37.5, -37.5, 37.5)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_c1mrp"]
tile_size = Vector2i(75, 75)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_l8rte")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_6u4cb"]
vertices = PackedVector2Array(821, 523, 461, 527, 606, 451, 674, 448, 760, 448, 901, 515, 1152, 0, 1128, 522, 1046, 526, 756, 367, 668, 601, 674, 670, 225, 602, 228, 520, 299, 527, 666, 375, 603, 370, 1199, 599, 1127, 601, 383, 2, 519, 372, 73, 157, 825, 670, 751, 672, 751, 595, 71, 522, 295, 446, 1047, 597, 902, 597, 523, 454, 451, 444)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 5, 4, 9), PackedInt32Array(10, 11, 12, 13, 14), PackedInt32Array(15, 3, 2, 16), PackedInt32Array(6, 17, 18, 7), PackedInt32Array(19, 6, 9, 15, 16), PackedInt32Array(19, 16, 20, 21), PackedInt32Array(22, 23, 24, 0), PackedInt32Array(1, 0, 24, 10), PackedInt32Array(13, 25, 21, 26), PackedInt32Array(8, 27, 28, 5), PackedInt32Array(29, 2, 1), PackedInt32Array(29, 1, 30, 20), PackedInt32Array(21, 20, 30, 26), PackedInt32Array(13, 26, 14), PackedInt32Array(10, 14, 1)])
outlines = Array[PackedVector2Array]([PackedVector2Array(71, 522, 73, 157, 383, 2, 1152, 0, 1199, 599, 1127, 601, 1128, 522, 1046, 526, 1047, 597, 902, 597, 901, 515, 821, 523, 825, 670, 751, 672, 751, 595, 668, 601, 674, 670, 225, 602, 228, 520), PackedVector2Array(295, 446, 299, 527, 461, 527, 451, 444), PackedVector2Array(519, 372, 523, 454, 606, 451, 603, 370), PackedVector2Array(666, 375, 674, 448, 760, 448, 756, 367)])

[node name="Level 4" type="Node2D"]

[node name="To_5" type="Area2D" parent="."]
position = Vector2(1167, 503)
script = ExtResource("1_moo27")

[node name="Sprite2D" type="Sprite2D" parent="To_5"]
texture = ExtResource("1_ta73c")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="To_5"]
polygon = PackedVector2Array(41, -46.3, 41, -44.8, 49, -36.8, 49, -34.7, 50, -33.4, 50, 37, 41.9, 46, 39.6, 46, 33.6, 50, -34.5, 50, -43, 44, -43, 41.6, -49, 32.6, -49, 28, -50, 22.1, -50, -14.2, -47.6, -25, -46.4, -25, -42.4, -35, -40.9, -35, -31.9, -46, -29.6, -46, -23.6, -50, -18.2, -50, 32.7, -50)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(1, -55)
script = ExtResource("2_hxmhj")
metadata/_edit_group_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_mrhrm")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2, 4)
shape = SubResource("RectangleShape2D_t1tw2")

[node name="Platform" type="TileMap" parent="."]
tile_set = SubResource("TileSet_c1mrp")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 131072, 2, 458753, 131072, 2, 458754, 131072, 2, 393220, 131072, 2, 393221, 131072, 2, 327687, 131072, 2, 327689, 131072, 2, 524297, 131072, 2, 458763, 131072, 2, 524300, 131072, 2, 524301, 131072, 2, 458766, 131072, 2, 524303, 131072, 2)

[node name="Bee" parent="." instance=ExtResource("5_vpwxy")]
position = Vector2(1035, 492)

[node name="Bee2" parent="." instance=ExtResource("5_vpwxy")]
position = Vector2(681, 322)

[node name="Bee3" parent="." instance=ExtResource("5_vpwxy")]
position = Vector2(272, 378)

[node name="Bee4" parent="." instance=ExtResource("5_vpwxy")]
position = Vector2(132, 464)

[node name="Bee5" parent="." instance=ExtResource("5_vpwxy")]
position = Vector2(473, 297)

[node name="Bee6" parent="." instance=ExtResource("5_vpwxy")]
position = Vector2(873, 412)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_4bsh8")

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
layout_mode = 0
offset_right = 1163.0
offset_bottom = 672.0
color = Color(0.607843, 0.258824, 0, 0.745098)

[node name="Label" type="Label" parent="UI/Menu"]
layout_mode = 0
offset_left = 456.0
offset_top = 134.0
offset_right = 691.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Pause Menu"

[node name="Continue" type="Button" parent="UI/Menu"]
layout_mode = 0
offset_left = 462.0
offset_top = 277.0
offset_right = 662.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="Quit" type="Button" parent="UI/Menu"]
layout_mode = 0
offset_left = 459.0
offset_top = 341.0
offset_right = 659.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Points" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_right = 71.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 20
text = "Points: 0"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_6u4cb")

[connection signal="body_entered" from="To_5" to="To_5" method="_on_body_entered"]
[connection signal="pressed" from="UI/Menu/Continue" to="UI/Menu" method="_on_continue_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI/Menu" method="_on_quit_pressed"]
